--- a/index.html
+++ b/index.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./index.css">
     <title>Address Book</title>
-    </head>
-    <body>
-        <div class="form-style">
-            <secion id="Add-Contact">
-                <div class="form-style-heading"><h3>Add Contact :</h3></div>
-                
-                <form id="contactForm">
-                    <label for="Name">
-                        <span>Name</span>
-                        <input type="text" id="Name" class="input-field" value="" placeholder="enter full name">
-                    </label>
-                    <label for="email">
-                        <span>Email</span>
-                        <input type="text" id="email" class="input-field" value="" placeholder="enter email address">
-                    </label>
-                    <label for="phoneNumber">
-                        <span>Phone Number</span>
-                        <input type="text" id="phoneNumber" class="input-field" value="" placeholder="enter phone number">
-                    </label>
-                </form>
-                <button id="buttonAdd">Add</button>
-            </secion>
-            
-            <section id="Contacts-List">
-                <div class="form-style-heading"><h3>Contact List :</h3></div>
-                <ol id="contactList"></ol>
-            </section>
+</head>
+
+<body>
+    <div class="header">
+        <h1>Contacts</h1>
+        <div class="search-class">
+                <input type="text" name="search_input" id="input_search" placeholder="search name">
+                <button id="search_button">Search</button>
+                <button id="reset_search_button">&#8634;</button>
+            </div>
+            <hr>
+    </div>
+    <form id="contacts-form">
+        <div class="item text">
+            <label>Name :</label>
+            <div class="field" ><input type="text" name="name" /></div>
         </div>
-        <script src="./index.js"></script>
-    </body>
+        <div class="item text">
+            <label>Phone Number :</label>
+            <div class="field"><input type="text" name="phone_number" /></div>
+        </div>
+        <div class="item text">
+            <label>Email :</label>
+            <div class="field"><input type="text" name="email" /></div>
+        </div>
+        <div class="button-wrapper">
+            <div class="item button">
+                <div class="field"><input type="button" id="contacts-op-discard" value="Discard" /></div>
+            </div>
+            <div class="item button button-default">
+                <div class="field"><input type="submit" id="contacts-op-save" value="Save" /></div>
+            </div>
+        </div>
+        <input type="hidden" name="id_entry" value="0" />
+    </form>
+<hr>
+<table id="contacts-table">
+        <tr id="contacts-head">
+            <th>No.</th>
+            <th>Name </th>
+            <th>Phone Number</th>
+            <th>Email</th>
+            <th>Actions</th>
+        </tr>
+    </table>
+
+
+    <script src="./index.js"></script>
+</body>
+
 </html>
